# lavende

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.js  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  crates.yml  go.yml  python.yml
_examples/golang/: bot.go  go.mod  go.sum  source.json
_examples/node/: bot.js  package-lock.json  package.json  source.json
_examples/python/: bot.py  source.json
_examples/rust/: Cargo.toml  source.json
_examples/rust/src/: main.rs
docs/: README.md  architecture.md
docs/golang/: README.md  filters.md  manager.md  player.md
docs/node/: README.md  filters.md  manager.md  player.md
docs/nodejs/: filters.md  manager.md  player.md
docs/python/: README.md  filters.md  manager.md  player.md
docs/rust/: README.md  filters.md  manager.md  player.md
npm/linux-x64-gnu/: package.json
rust/: Cargo.toml
rust/src/: config.rs  events.rs  lib.rs  player.rs  protocol.rs  transport.rs
rust/src/audio/: constants.rs  effects.rs  engine.rs  playback.rs
rust/src/sources/: anghami.rs  flowery.rs  gaana.rs  local.rs  pandora.rs  shazam.rs  soundcloud.rs  spotify.rs
src/cargo/: Cargo.toml
src/cargo/src/: lib.rs
src/go/: Cargo.toml  build.rs  lavende.h
src/go/lavende/: build.sh  go.mod  lavende.go  lavende.h
src/go/src/: lib.rs
src/node/: Cargo.toml  index.d.ts  index.js  index.js.map  index.ts  package-lock.json  package.json
src/node/npm/linux-arm64-gnu/: package.json
src/node/npm/win32-x64-msvc/: package.json
src/node/src/: lib.rs  player.rs
src/npm/: .npmignore  Cargo.toml  index.ts  package.json  tsconfig.json
src/npm/npm/darwin-arm64/: package.json
src/npm/npm/darwin-x64/: package.json
src/python/: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
src/python/lavende/: __init__.py  constants.py  filter_manager.py  manager.py  player.py  queue.py  track.py  utils.py
src/python/src/: lib.rs  player.rs
src/swift/: Cargo.toml  build-xcframework.sh  cmake_wrapper.sh
src/swift/LavendeSwift/: Package.swift
src/swift/LavendeSwift/Sources/Lavende/: Lavende.swift  lavende_swift.swift
src/swift/src/: lib.rs
