[package]
name = "lavende"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16", features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.2"

symphonia = { version = "0.5.3", features = ["aac", "mp3", "ogg", "flac", "wav", "isomp4"] }
audiopus = { git = "https://github.com/aikyaam/audiopus", branch = "master" }
davey = { git = "https://github.com/Snazzah/davey", branch = "master" }

xsalsa20poly1305 = "0.9.1"
des = "0.8.1"
base64 = "0.22"
rand = "0.8"
aes = "0.8"
cipher = "0.5.0"
block-padding = "0.4.2"
hex = "0.4.3"
blowfish = "0.9"
md-5 = "0.10"
cbc = "0.1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"

tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "cookies", "gzip", "deflate"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
flume = "0.11"
dashmap = "6.1"
ipnet = "2.11"
parking_lot = "0.12"
thiserror = "2.0"
regex = "1.10"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1.5"
uuid = { version = "1.8", features = ["v4"] }
ctr = "0.9"
time = { version = "=0.3.36", features = ["formatting", "macros", "local-offset"] }
tracing-log = "0.2"

[build-dependencies]
napi-build = "2.1"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1

