[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
lavende = { path = "../../src/cargo" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird = { git = "https://github.com/serenity-rs/songbird", features = ["serenity", "driver", "rustls", "receive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
