[package]
name = "lavende"
version = "0.1.11"
edition = "2024"
description = "In-process Discord voice connection and playback engine"
readme = "../../README.md"
license = "Apache-2.0"
repository = "https://github.com/debaucheryparty/lavende"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.2.1"
futures = "0.3.32"
lavende-core = { path = "../../library", version = "0.1.3" }
rand = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync"] }
