[package]
name = "lavende_go"
version = "0.1.11"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
lavende = { path = "../../src/cargo", version = "0.1.3" }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1.19"
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"
