[package]
name = "lavende-node"
version.workspace = true
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2.16"
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
lavende-core = { path = "../../library" }

[build-dependencies]
napi-build = "2.1"
