[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lavende"
description = "In-process Discord voice connection and playback engine"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
authors = [
    { name = "Debauchery Party" }
]
keywords = ["discord", "voice", "audio", "music", "lavalink", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/debaucheryparty/lavende"
Repository = "https://github.com/debaucheryparty/lavende"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lavende._lavende"
