[package]
name = "lavende-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "lavende_swift"

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"] }
lavende = { path = "../cargo" }
lavende-core = { path = "../../library" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


